--- a/index.html
+++ b/index.html
@@ -229,35 +229,22 @@ Instead of manually running multiple tools, users can launch and manage them thr
 </section>
 
 <!-- The Foundation of Forever -->
-<section id="foundation" class="page" style="background:#ffffff; padding:60px 20px;">
-  <div class="content" style="max-width:900px; margin:auto; text-align:center;">
-    <h2 style="color:#2c3e50;">The Foundation of Forever</h2>
-    
-    <div style="margin-top:30px;">
-      <!-- Image with URL-encoded spaces for GitHub Pages -->
-      <img src="assets/The%20Foundation%20of%20Forever.jpg" 
-           alt="The Foundation of Forever" 
-           style="width:100%; max-width:700px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);"
-           onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"/>
-      <!-- Fallback message if image fails -->
-      <p style="display:none; color:#e74c3c; font-size:16px; margin-top:15px;">
-        Image not found. Please make sure "The Foundation of Forever.jpg" is uploaded in the assets folder.
-      </p>
+<section id="The Foundation of Forever" class="page">
+  <div class="content">
+    <h2>The Foundation of Forever</h2>
+    <div class="foundation-wrap">
+      <img src="assets/The Foundation Forever.jpg" alt="The Foundation of Forever" class="foundation-img">
     </div>
-
-    <p style="margin-top:20px; font-size:16px; color:#34495e;">
-      This section highlights one of my key projects and inspirations, representing a foundation built on knowledge, research, and continuous growth. 
-      The Foundation of Forever symbolizes my commitment to learning, forensic expertise, and cybersecurity exploration.
-    </p>
   </div>
 </section>
+
 
 <!-- Contact Section -->
 <section id="contact" class="page" style="background:#ecf0f1; padding:60px 20px;">
   <div class="content" style="max-width:600px; margin:auto; text-align:center;">
     <h2 style="color:#2c3e50;">Contact Me</h2>
     <p style="margin-top:10px; font-size:16px;">
-      📧 <a href="mailto:sayanimaity2024@gmail.com" style="color:#27ae60; text-decoration:none;">sayanimaity2024@gmail.com</a>
+      📧 <a href="mailto:sayanimaity2024@gmail.com" style="color:#1E90FF; text-decoration:none;">sayanimaity2024@gmail.com</a>
     </p>
 
     <form id="contact-form" action="REPLACE_WITH_FORMSPREE_ENDPOINT" method="POST" style="margin-top:30px; text-align:left;">
