--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
   <div class="content">
     <h2>The Foundation of Forever</h2>
     <div class="foundation-wrap">
-      <img src="assets/The Foundation Forever.jpg" alt="The Foundation of Forever" class="foundation-img">
+      <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" class="foundation-img">
     </div>
   </div>
 </section>
