--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@ Instead of manually running multiple tools, users can launch and manage them thr
   </div>
 </section>
 
-<!-- The Foundation of Forever -->
 <section id="The Foundation of Forever" class="page">
   <div class="content">
     <h2>The Foundation of Forever</h2>
     <div class="foundation-wrap">
-      <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" class="foundation-img">
+      <img src="assets/The Foundation of Forever.jpg" alt="The Foundation of Forever" class="The Foundation of Forever-img" style="max-width:100%; height:auto; display:block; margin:auto;">
     </div>
   </div>
 </section>
+
 
 
 <!-- Contact Section -->
@@ -244,7 +244,12 @@ Instead of manually running multiple tools, users can launch and manage them thr
   <div class="content" style="max-width:600px; margin:auto; text-align:center;">
     <h2 style="color:#2c3e50;">Contact Me</h2>
     <p style="margin-top:10px; font-size:16px;">
-      📧 <a href="mailto:sayanimaity2024@gmail.com" style="color:#1E90FF; text-decoration:none;">sayanimaity2024@gmail.com</a>
+     <div style="display: inline-block; background-color: #00008B; padding: 10px 20px; border-radius: 8px;">
+  📧 <a href="mailto:sayanimaity2024@gmail.com" style="color: #ffffff; text-decoration: none; font-weight: bold;">
+    sayanimaity2024@gmail.com
+  </a>
+</div>
+
     </p>
 
     <form id="contact-form" action="REPLACE_WITH_FORMSPREE_ENDPOINT" method="POST" style="margin-top:30px; text-align:left;">
