--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@ Instead of manually running multiple tools, users can launch and manage them thr
 <section id="The-Foundation-of-Forever" class="page">
   <div class="content">
     <h2>The Foundation of Forever</h2>
-    <div class="foundation-wrap">
+    <div class="The Foundation of Forever-wrap">
       <img src="assets/The%20Foundation%20of%20Forever.jpg" 
            alt="The Foundation of Forever" 
-           class="foundation-img" 
+           class="The Foundation of Forever-img" 
            style="max-width:100%; height:auto; display:block; margin:auto;">
     </div>
   </div>
