--- a/index.html
+++ b/index.html
@@ -228,17 +228,19 @@ Instead of manually running multiple tools, users can launch and manage them thr
   </div>
 </section>
 
-<section id="The-Foundation-of-Forever" class="page">
+<section id="empire" class="page">
   <div class="content">
     <h2>The Foundation of Forever</h2>
-    <div class="The Foundation of Forever-wrap">
-      <img src="assets/The%20Foundation%20of%20Forever.jpg" 
-           alt="The Foundation of Forever" 
-           class="The Foundation of Forever-img" 
-           style="max-width:100%; height:auto; display:block; margin:auto;">
+    <div class="empire-wrap">
+      <img 
+        src="assets/The%20Foundation%20of%20Forever.jpg" 
+        alt="The Foundation of Forever" 
+        class="empire-img"
+      >
     </div>
   </div>
 </section>
+
 
 
 
