--- a/index.html
+++ b/index.html
@@ -169,23 +169,28 @@
       </div>
 
       <!-- AI -->
-      <div class="skill-column">
-        <h3>AI</h3>
-        <div class="skill" data-val="80"><label>AI Prompting</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
-      </div>
+<div class="skill-column">
+  <h3>AI</h3>
+  <div class="skill" data-val="80">
+    <label>AI Prompting</label>
+    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+  </div>
 
-      <!-- Data Protection and Information Hiding Techniques -->
-      <div class="skill-column">
-      <h3>Data Protection and Information Hiding Techniques</h3>
-      <div class="skill" data-val="70"><label>Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Steganography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Steganalysis</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Obfuscation</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Encoding</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Watermarking</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Quantum Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-      <div class="skill" data-val="70"><label>Format-Preserving Encryption (FPE)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-    </div>
+  <!-- Divider line -->
+  <hr style="border: 0; border-top: 1px solid #ccc; margin: 10px 0;">
+
+  <!-- Subsection -->
+  <h4>Data Protection & Information Hiding Techniques</h4>
+  <div class="skill" data-val="70"><label>Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Steganography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Steganalysis</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Obfuscation</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Encoding</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Watermarking</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Quantum Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+  <div class="skill" data-val="70"><label>Format-Preserving Encryption (FPE)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+</div>
+
 
 
     
