--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
           <article class="project-card">
             <img src="assets/CMTL — CyberSec Multi-Tool Launcher.jpg" alt="CMTL">
-            <h3>CMTL — CyberSec Multi-Tool Launcher (2025–Present)</h3>
+            <h3>CMTL — CyberSec Multi-Tool Launcher (2025–Presently ongoing)</h3>
             <p>Cyber Security Multi-Tool Launcher is a unified GUI-based platform that integrates powerful network scanning, vulnerability assessment, penetration testing, and forensic tools into a single tool.
 Instead of manually running multiple tools, users can launch and manage them through one centralized interface with "Just a Click".</p>
             <p><a href="https://github.com/isayani-78/CMTL" target="_blank" class="github-link">View on GitHub</a></p>
@@ -227,7 +227,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
 
           <article class="project-card">
             <img src="assets/AI- powered Phishing Email Detector (In Development).jpg" alt="Phishing Detector">
-            <h3>AI-Powered Phishing Email Detector (2025–Present)</h3>
+            <h3>AI-Powered Phishing Email Detector (2025–Presently ongoing)</h3>
             <p>NLP + header analysis to detect phishing emails (in development). Seeking contributions.</p>
             <p><a href="https://github.com/isayani-78/AI-Powered-Phishing-Email-Detector" target="_blank" class="github-link">View on GitHub</a></p>
           </article>
