--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <h3>🎓 Education</h3>
     <ul>
       <li>📘 <strong>ICSE, ISC (Pure Science):-</strong> St. Thomas' High School, Howrah, West Bengal</li>
-      <li>💻 <strong>B.Sc. Digital Forensics:-</strong> Indian School of Ethical Hacking (ISOEH) under Maulana Abul Kalam Azad University, West Bengal, (MAKAUT), 2023–2026</li>
+      <li>💻 <strong>B.Sc. Digital Forensics:-</strong> Indian School of Ethical Hacking (ISOEH) under Maulana Abul Kalam Azad University of Technology, West Bengal, (MAKAUT), 2023–2026</li>
     </ul>
 
     <h3>🎯 Goal</h3>
