--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@
     <h2>Skills</h2>
     <div class="skill-grid-columns">
 
+      <section id="skills" class="page">
+  <div class="content">
+    <h2>Skills</h2>
+    <div class="skill-grid-columns">
+
       <!-- Languages & Scripting -->
-      <div class="skill-column">
+      <div class="skill-box">
         <h3>Languages & Scripting</h3>
         <div class="skill" data-val="90"><label>Python</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="80"><label>Matplotlib</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
@@ -111,7 +116,7 @@
       </div>
 
       <!-- Security & Pentesting -->
-      <div class="skill-column">
+      <div class="skill-box">
         <h3>Security & Pentesting</h3>
         <div class="skill" data-val="85"><label>VAPT</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="80"><label>WAPT</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
@@ -123,7 +128,7 @@
       </div>
 
       <!-- Forensic & OSINT -->
-      <div class="skill-column">
+      <div class="skill-box">
         <h3>Forensic & OSINT</h3>
         <div class="skill" data-val="90"><label>Digital Forensic</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="85"><label>Computer Forensic</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
@@ -135,7 +140,7 @@
       </div>
 
       <!-- Operating Systems -->
-      <div class="skill-column">
+      <div class="skill-box">
         <h3>Operating Systems</h3>
         <div class="skill" data-val="85"><label>Unix</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="90"><label>GNU/Linux</label><div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div></div>
@@ -145,10 +150,9 @@
         <div class="skill" data-val="70"><label>Parrot</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="70"><label>Windows (as always)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
       </div>
-      
 
       <!-- Tools -->
-      <div class="skill-column">
+      <div class="skill-box">
         <h3>Tools</h3>
         <div class="skill" data-val="85"><label>Nmap</label><div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div></div>
         <div class="skill" data-val="75"><label>Autopsy</label><div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div></div>
@@ -170,35 +174,26 @@
       </div>
 
       <!-- AI -->
-<div class="skill-column">
-  <h3>AI</h3>
-  <div class="skill" data-val="80">
-    <label>AI Prompting</label>
-    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-  </div>
+      <div class="skill-box">
+        <h3>AI</h3>
+        <div class="skill" data-val="80"><label>AI Prompting</label><div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div></div>
 
-  <!-- Divider line -->
-  <hr style="border: 0; border-top: 1px solid #ccc; margin: 10px 0;">
+        <hr style="border: 0; border-top: 1px solid #444; margin: 10px 0;">
 
-  <!-- Subsection -->
-  <h4>Data Protection & Information Hiding Techniques</h4>
-  <div class="skill" data-val="70"><label>Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Steganography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Steganalysis</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Obfuscation</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Encoding</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Watermarking</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Quantum Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-  <div class="skill" data-val="70"><label>Format-Preserving Encryption (FPE)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
-</div>
+        <h4>Data Protection & Information Hiding Techniques</h4>
+        <div class="skill" data-val="70"><label>Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Steganography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Steganalysis</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Obfuscation</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Encoding</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Decoding/label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Quantum Cryptography</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+        <div class="skill" data-val="70"><label>Format-Preserving Encryption (FPE)</label><div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div></div>
+      </div>
 
-
-
-    
+    </div>
   </div>
 </section>
-
-
 
     <section id="projects" class="page">
       <div class="content">
