--- a/index.html
+++ b/index.html
@@ -300,19 +300,18 @@
         </div>
       </div>
 
-      <!-- AI -->
+      <!-- AI & ML -->
       <div class="skill-box">
         <h3>AI</h3>
         <div class="skill" data-val="80">
           <label>AI Prompting</label>
+          <label>ML(Machine learning)</label>
           <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
         </div>
 
-        <!-- Divider line -->
-        <hr style="border: 0; border-top: 1px solid #ccc; margin: 10px 0;">
+        
 
-        <!-- Subsection -->
-        <h4>Data Protection & Information Hiding Techniques</h4>
+        <!-- Data Protection & Information Hiding Techniques -->
         <div class="skill" data-val="70">
           <label>Cryptography</label>
           <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
