--- a/index.html
+++ b/index.html
@@ -300,52 +300,74 @@
         </div>
       </div>
 
-      <!-- AI & ML -->
-      <div class="skill-box">
-        <h3>AI</h3>
-        <div class="skill" data-val="80">
-          <label>AI Prompting</label>
-          <label>ML(Machine learning)</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
+     <!-- AI & ML -->
+<div class="skill-box">
+  <h3>Artificial Intelligence & Machine Learning</h3>
+
+  <div class="skill" data-val="80">
+    <label>AI Prompting</label>
+    <div class="bar">
+      <div class="fill" data-val="80"></div>
+      <span class="percent">0%</span>
+    </div>
+  </div>
+
+  <div class="skill" data-val="75">
+    <label>Machine Learning (ML)</label>
+    <div class="bar">
+      <div class="fill" data-val="75"></div>
+      <span class="percent">0%</span>
+    </div>
+  </div>
+
+</div>
+
 
         
 
-        <!-- Data Protection & Information Hiding Techniques -->
-        <div class="skill" data-val="70">
-          <label>Cryptography</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Steganography</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Steganalysis</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Obfuscation</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Encoding</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Watermarking</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Quantum Cryptography</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Format-Preserving Encryption (FPE)</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
+       <!-- Data Protection & Information Hiding Techniques -->
+<div class="skill-box">
+  <h3>Data Protection & Information Hiding Techniques</h3>
 
+  <div class="skill" data-val="70">
+    <label>Cryptography</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Steganography</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Steganalysis</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Obfuscation</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Encoding</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Watermarking</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Quantum Cryptography</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Format-Preserving Encryption (FPE)</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
     </div>
   </div>
 </section>
