--- a/index.html
+++ b/index.html
@@ -300,77 +300,102 @@
         </div>
       </div>
 
-     <!-- AI & ML -->
-<div class="skill-box">
-  <h3>Artificial Intelligence & Machine Learning</h3>
+      <!-- AI & ML -->
+      <div class="skill-box">
+        <h3>Artificial Intelligence & Machine Learning</h3>
+        <div class="skill" data-val="80">
+          <label>AI Prompting</label>
+          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="75">
+          <label>Machine Learning (ML)</label>
+          <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
+        </div>
+      </div>
 
-  <div class="skill" data-val="80">
-    <label>AI Prompting</label>
-    <div class="bar">
-      <div class="fill" data-val="80"></div>
-      <span class="percent">0%</span>
-    </div>
-  </div>
+      <!-- Data Protection & Info Hiding -->
+      <div class="skill-box">
+        <h3>Data Protection & Information Hiding Techniques</h3>
+        <div class="skill" data-val="70">
+          <label>Cryptography</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Steganography</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Steganalysis</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Obfuscation</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Encoding</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Watermarking</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Quantum Cryptography</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+        <div class="skill" data-val="70">
+          <label>Format-Preserving Encryption (FPE)</label>
+          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+        </div>
+      </div>
 
-  <div class="skill" data-val="75">
-    <label>Machine Learning (ML)</label>
-    <div class="bar">
-      <div class="fill" data-val="75"></div>
-      <span class="percent">0%</span>
-    </div>
-  </div>
-
-</div>
-
-
-        
-
-       <!-- Data Protection & Information Hiding Techniques -->
-<div class="skill-box">
-  <h3>Data Protection & Information Hiding Techniques</h3>
-
-  <div class="skill" data-val="70">
-    <label>Cryptography</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Steganography</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Steganalysis</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Obfuscation</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Encoding</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Watermarking</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Quantum Cryptography</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
-
-  <div class="skill" data-val="70">
-    <label>Format-Preserving Encryption (FPE)</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-  </div>
     </div>
   </div>
 </section>
+
+<style>
+/* Uniform skill box */
+.skill-grid-columns {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  gap: 15px; /* gap komano */
+}
+.skill-box {
+  background: #f8f9fa;
+  padding: 15px;
+  border-radius: 8px;
+  min-height: 350px;  /* ekoi height */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.skill-box h3 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.skill {
+  margin-bottom: 6px; /* kom gap */
+}
+.bar {
+  background: #ddd;
+  border-radius: 6px;
+  overflow: hidden;
+  height: 10px;
+  margin-top: 3px;
+}
+.fill {
+  background: #1e90ff;
+  height: 100%;
+  width: 0;
+  transition: width 1s ease-in-out;
+}
+.percent {
+  font-size: 12px;
+  margin-left: 5px;
+}
+</style>
+
 
 
     <section id="projects" class="page">
