--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
           <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
         </div>
       </div>
+<div class="skill-grid-columns">
 
       <!-- AI & ML -->
 <div class="skill-box">
