--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
         </div>
       </div>
+<div class="skill-grid-columns">
 
       <!-- Operating Systems -->
       <div class="skill-box">
