--- a/index.html
+++ b/index.html
@@ -194,10 +194,8 @@
         </div>
       </div>
       
-<div class="skill-grid-columns">
-
       <!-- Operating Systems -->
-      <div class="skill-box">
+      <div class="skill-box small-box">
         <h3>Operating Systems</h3>
         <div class="skill" data-val="85">
           <label>Unix</label>
