--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
       
       <!-- Operating Systems -->
-      <div class="skill-box small-box">
+      <div class="skill-box id="os-box">
         <h3>Operating Systems</h3>
         <div class="skill" data-val="85">
           <label>Unix</label>
