--- a/index.html
+++ b/index.html
@@ -194,38 +194,45 @@
         </div>
       </div>
       
-      <!-- Operating Systems -->
-      <div class="skill-box id="os-box">
-        <h3>Operating Systems</h3>
-        <div class="skill" data-val="85">
-          <label>Unix</label>
-          <div class="bar"><div class="fill" data-val="85"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="90">
-          <label>GNU/Linux</label>
-          <div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Ubuntu</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="80">
-          <label>Kali Linux</label>
-          <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Black Arch</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Parrot</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-        <div class="skill" data-val="70">
-          <label>Windows (as always)</label>
-          <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
-        </div>
-      </div>
+      <!-- Operating Systems (small box version) -->
+<div class="skill-box small-box" id="os-box">
+  <h3>Operating Systems</h3>
+
+  <div class="skill" data-val="80">
+    <label>Unix</label>
+    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="80">
+    <label>GNU/Linux</label>
+    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Ubuntu</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="70">
+    <label>Kali Linux</label>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="60">
+    <label>Black Arch</label>
+    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="65">
+    <label>Parrot</label>
+    <div class="bar"><div class="fill" data-val="65"></div><span class="percent">0%</span></div>
+  </div>
+
+  <div class="skill" data-val="60">
+    <label>Windows (as always)</label>
+    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
+  </div>
+</div>
 
       <!-- Tools -->
       <div class="skill-box">
