--- a/index.html
+++ b/index.html
@@ -194,45 +194,38 @@
         </div>
       </div>
       
-      <!-- Operating Systems (small box version) -->
-<div class="skill-box small-box" id="os-box">
+      <div class="skill-box" id="os-box">
   <h3>Operating Systems</h3>
-
-  <div class="skill" data-val="80">
+  <div class="skill">
     <label>Unix</label>
-    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="80"></div></div>
   </div>
-
-  <div class="skill" data-val="80">
+  <div class="skill">
     <label>GNU/Linux</label>
-    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="85"></div></div>
   </div>
-
-  <div class="skill" data-val="70">
+  <div class="skill">
     <label>Ubuntu</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="70"></div></div>
   </div>
-
-  <div class="skill" data-val="70">
+  <div class="skill">
     <label>Kali Linux</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="75"></div></div>
   </div>
-
-  <div class="skill" data-val="60">
+  <div class="skill">
     <label>Black Arch</label>
-    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="65"></div></div>
   </div>
-
-  <div class="skill" data-val="65">
+  <div class="skill">
     <label>Parrot</label>
-    <div class="bar"><div class="fill" data-val="65"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="60"></div></div>
   </div>
-
-  <div class="skill" data-val="60">
+  <div class="skill">
     <label>Windows (as always)</label>
-    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="50"></div></div>
   </div>
 </div>
+
 
       <!-- Tools -->
       <div class="skill-box">
