--- a/index.html
+++ b/index.html
@@ -193,33 +193,42 @@
           <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
         </div>
       </div>
+
+      <!-- Operating System -->
       
-      <div class="skill-box" id="os-box">
+     <div class="skill-box" id="os-box">
   <h3>Operating Systems</h3>
+
   <div class="skill">
     <label>Unix</label>
     <div class="bar"><div class="fill" data-val="80"></div></div>
   </div>
+
   <div class="skill">
     <label>GNU/Linux</label>
     <div class="bar"><div class="fill" data-val="85"></div></div>
   </div>
+
   <div class="skill">
     <label>Ubuntu</label>
     <div class="bar"><div class="fill" data-val="70"></div></div>
   </div>
+
   <div class="skill">
     <label>Kali Linux</label>
     <div class="bar"><div class="fill" data-val="75"></div></div>
   </div>
+
   <div class="skill">
     <label>Black Arch</label>
     <div class="bar"><div class="fill" data-val="65"></div></div>
   </div>
+
   <div class="skill">
     <label>Parrot</label>
     <div class="bar"><div class="fill" data-val="60"></div></div>
   </div>
+
   <div class="skill">
     <label>Windows (as always)</label>
     <div class="bar"><div class="fill" data-val="50"></div></div>
@@ -355,7 +364,7 @@
   </div>
 
   <div class="skill" data-val="70">
-    <label>Watermarking</label>
+    <label>Decoding</label>
     <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
   </div>
 
