--- a/index.html
+++ b/index.html
@@ -194,46 +194,46 @@
         </div>
       </div>
 
-      <!-- Operating System -->
-      
-     <div class="skill-box" id="os-box">
+      <!-- Operating Systems (small box version) -->
+<div class="skill-box small-box" id="os-box">
   <h3>Operating Systems</h3>
 
-  <div class="skill">
+  <div class="skill" data-val="80">
     <label>Unix</label>
-    <div class="bar"><div class="fill" data-val="80"></div></div>
+    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill">
+  <div class="skill" data-val="80">
     <label>GNU/Linux</label>
-    <div class="bar"><div class="fill" data-val="85"></div></div>
+    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill">
+  <div class="skill" data-val="70">
     <label>Ubuntu</label>
-    <div class="bar"><div class="fill" data-val="70"></div></div>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill">
+  <div class="skill" data-val="70">
     <label>Kali Linux</label>
-    <div class="bar"><div class="fill" data-val="75"></div></div>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill">
+  <div class="skill" data-val="60">
     <label>Black Arch</label>
-    <div class="bar"><div class="fill" data-val="65"></div></div>
+    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill">
+  <div class="skill" data-val="65">
     <label>Parrot</label>
-    <div class="bar"><div class="fill" data-val="60"></div></div>
+    <div class="bar"><div class="fill" data-val="65"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill">
+  <div class="skill" data-val="60">
     <label>Windows (as always)</label>
-    <div class="bar"><div class="fill" data-val="50"></div></div>
+    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
   </div>
 </div>
+
 
 
       <!-- Tools -->
