--- a/index.html
+++ b/index.html
@@ -194,28 +194,28 @@
         </div>
       </div>
 
-      <!-- Operating Systems (small box version) -->
-<div class="skill-box small-box" id="os-box">
+      <!-- Operating Systems -->
+<div class="skill-box">
   <h3>Operating Systems</h3>
 
-  <div class="skill" data-val="80">
+  <div class="skill" data-val="70">
     <label>Unix</label>
-    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill" data-val="80">
+  <div class="skill" data-val="90">
     <label>GNU/Linux</label>
-    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="90"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill" data-val="70">
+  <div class="skill" data-val="75">
     <label>Ubuntu</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="75"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill" data-val="70">
+  <div class="skill" data-val="65">
     <label>Kali Linux</label>
-    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="65"></div><span class="percent">0%</span></div>
   </div>
 
   <div class="skill" data-val="60">
@@ -223,17 +223,16 @@
     <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill" data-val="65">
+  <div class="skill" data-val="70">
     <label>Parrot</label>
-    <div class="bar"><div class="fill" data-val="65"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="70"></div><span class="percent">0%</span></div>
   </div>
 
-  <div class="skill" data-val="60">
+  <div class="skill" data-val="80">
     <label>Windows (as always)</label>
-    <div class="bar"><div class="fill" data-val="60"></div><span class="percent">0%</span></div>
+    <div class="bar"><div class="fill" data-val="80"></div><span class="percent">0%</span></div>
   </div>
 </div>
-
 
 
       <!-- Tools -->
