--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
 
     </p>
 
-    <form id="contact-form" action="REPLACE_WITH_FORMSPREE_ENDPOINT" method="POST" style="margin-top:30px; text-align:left;">
+    <form id="contact-form" action="https://formspree.io/f/mpwjkzzz" method="POST" style="margin-top:30px; text-align:left;">
       <div class="input-bar" style="margin-bottom:15px;">
         <label for="name" style="font-weight:600; color:#2c3e50;">Name</label>
         <input id="name" name="name" required placeholder="Your Name" style="width:100%; padding:12px; border-radius:8px; border:2px solid #bdc3c7; font-size:15px; transition:0.3s;"/>
