--- a/index.html
+++ b/index.html
@@ -417,6 +417,70 @@ Instead of manually running multiple tools, users can launch and manage them thr
         </div>
       </div>
     </section>
+      
+<!-- Certificates Section -->
+<section id="certificates" class="page">
+  <div class="content">
+    <h2>Certificates of Participation</h2>
+    <div class="certificates-grid">
+
+      <!-- Certificate 1 -->
+      <div class="certificate-card">
+        <img src="assets/Completion of Core Python Course.jpg" alt="Completion of Core Python Course">
+        <h3>Completion of Core Python Course</h3>
+      </div>
+
+      <!-- Certificate 2 -->
+      <div class="certificate-card">
+        <img src="assets/Certificate from Cyber Security Centre of Exellence Deprtment of Information Technology & Electronics Government of West Bengal.jpg" alt="Certificate from Cyber Security Centre of Exellence Deprtment of Information Technology & Electronics Government of West Bengal">
+        <h3>Certificate from Cyber Security Centre of Exellence Deprtment of Information Technology & Electronics Government of West Bengal</h3>
+      </div>
+
+      <!-- Certificate 3 -->
+      <div class="certificate-card">
+        <img src="assets/Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal.jpg" alt="Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal">
+        <h3>Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal</h3>
+      </div>
+
+      <!-- Certificate 4 -->
+      <div class="certificate-card">
+        <img src="assets/CTF Participation of Infocom Hackstar by ABP (2023).jpg" alt="CTF Participation of Infocom Hackstar by ABP (2023)">
+        <h3>CTF Participation of Infocom Hackstar by ABP (2023)</h3>
+      </div>
+
+      <!-- Certificate 5 -->
+      <div class="certificate-card">
+        <img src="assets/CTF Participation of Infocom Hackstar by ABP (2024).jpg" alt="CTF Participation of Infocom Hackstar by ABP (2024)">
+        <h3>CTF Participation of Infocom Hackstar by ABP (2024)</h3>
+      </div>
+
+      <!-- Certificate 6 -->
+      <div class="certificate-card">
+        <img src="assets/Participation in Cryptoquest.jpg" alt="Participation in Cryptoquest">
+        <h3>Participation in Cryptoquest</h3>
+      </div>
+
+      <!-- Certificate 7 -->
+      <div class="certificate-card">
+        <img src="assets/Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1].jpg" alt="Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1]">
+        <h3>Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1]</h3>
+      </div>
+
+      <!-- Certificate 8 -->
+      <div class="certificate-card">
+        <img src="assets/Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 2].jpg" alt="Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 2]">
+        <h3>Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 2]</h3>
+      </div>
+
+      <!-- Certificate 9 -->
+      <div class="certificate-card">
+        <img src="assets/Participation In CTF workshop By Cyraksha (The Cyber Club Of Kolkata).jpg" alt="Participation In CTF workshop By Cyraksha (The Cyber Club Of Kolkata)">
+        <h3>Participation In CTF workshop By Cyraksha (The Cyber Club Of Kolkata)</h3>
+      </div>
+
+    </div>
+  </div>
+</section>
 
     <!-- Research & Goal Section -->
 <section id="research" class="page" style="background:#f8f9fa; padding:60px 20px;">
@@ -442,9 +506,6 @@ Instead of manually running multiple tools, users can launch and manage them thr
     </div>
   </div>
 </section>
-
-
-
 
 
 <!-- Contact Section -->
