--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
-    <a href="#projects">Certificates of Participation</a>
+    <a href="#Certificates of Participation">Certificates of Participation</a>
     <a href="#research">Research</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
