--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
     </section>
       
 <!-- Certificates Section -->
-<section id="certificates" class="page">
+<section id="certificates of Participation" class="page">
   <div class="content">
     <h2>Certificates of Participation</h2>
     <div class="certificates-grid">
