--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
 
       <!-- Certificate 4 -->
       <div class="certificate-card">
-        <img src="assets/CTF Participation of Infocom Hackstar by ABP (2023).jpg" alt="CTF Participation of Infocom Hackstar by ABP (2023)">
+        <img src="assets/CTF Participation of Infocom Hackstar by ABP (2023).jpeg" alt="CTF Participation of Infocom Hackstar by ABP (2023)">
         <h3>CTF Participation of Infocom Hackstar by ABP (2023)</h3>
       </div>
 
@@ -463,7 +463,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
 
       <!-- Certificate 7 -->
       <div class="certificate-card">
-        <img src="assets/Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1].jpg" alt="Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1]">
+        <img src="assets/Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1].jfif" alt="Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1]">
         <h3>Participation in CTF of Cyraksha (The Cyber Club of Kolkata) [Hackathon 1]</h3>
       </div>
 
