--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
 
       <!-- Certificate 3 -->
       <div class="certificate-card">
-        <img src="assets/Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal.jpg" alt="Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal">
+        <img src="assets/Participation in CTF Organised by Our University Maulana Abul Kalam Azad University OF Technology (MAKAUT), West Bengal.jpg" alt="Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal">
         <h3>Participation in CTF Organised by Our University Maunala Abul Kalam Azad University OF Technology (MAKAUT), West Bengal</h3>
       </div>
 
