--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <a href="#research">Research</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
-    <a class="btn" href="resume.pdf" download>Download Resume</a>
+    <a href="https://example.com/resume.pdf" class="btn btn2" download target="_blank">Download Resume</a>
+
   </nav>
 
   <!-- Hamburger for mobile -->
