--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#research">Research</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
-    <a href="resume.pdf" class="resume-btn" download>Download Resume</a>
+    <a href="isayani-78.github.io/resume.pdf" class="resume-btn" download>Download Resume</a>
 
   </nav>
 
