--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
    <a href="https://isayani-78.github.io/resume.pdf" 
-   class="resume-btn" 
+   class=".resume-btn" 
    download="Sayani Maity Resume.pdf">
    Download Resume
 </a>
