--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@ Instead of manually running multiple tools, users can launch and manage them thr
 
 <!-- Footer -->
 <footer class="site-footer" style="background:#2c3e50; color:white; text-align:center; padding:20px 0;">
-  <p>© <span id="year"></span> Sayani Maity — Built with care • Hosted on GitHub Pages</p>
+  <p>© <span id="year"></span> Sayani Maity — Built with care.</p>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </footer>
 
