--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <a href="https://discord.com/invite/isayani_78" target="_blank" aria-label="Discord">Discord</a>
             <a href="https://auth.geeksforgeeks.org/user/isayani_05" target="_blank" aria-label="GeeksforGeeks">GfG</a>
             <a href="https://x.com/isayani78" target="_blank" aria-label="X">X</a>
+            <a href="https://medium.com/@isayani-78" target="_blank" aria-label="Medium">Medium</a>
             <a href="https://www.facebook.com/isayani78" target="_blank" aria-label="Facebook">Facebook</a>
           </div>
         </div>
