--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#skills">Skills</a>
     <a href="#projects">Projects</a>
     <a href="#Certificates of Participation">Certificates of Participation</a>
-    <a href="#research">Research</a>
+    <a href="#research">Research Focus</a>
     <a href="#empire">The Foundation of Forever</a>
     <a href="#contact">Contact</a>
    <a href="https://isayani-78.github.io/resume.pdf" 
@@ -88,9 +88,9 @@
     <section id="about" class="page">
   <div class="content">
     <h2>About Me</h2>
-    <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics</strong> (2023–2026). I specialize in digital forensics, penetration testing, OSINT, and security tooling. I create detailed case reports, analyze digital artifacts, and reconstruct system events to uncover evidence. I actively participate in Capture The Flag (CTF) challenges, hands-on security research, and explore AI-assisted detection tools, automation, and threat analysis techniques.</p>
-    <p>My skill set includes Python, Bash, shell scripting, VAPT, WAPT, threat management, Nmap, Burp Suite, Autopsy, networking, OSINT research. I am deeply passionate about learning, sharing knowledge, and applying my expertise to practical cybersecurity projects that strengthen digital systems and uncover vulnerabilities.</p>
-    <p>I am curious, analytical, and highly detail-oriented, which drives me to explore complex digital problems and uncover practical solutions. Beyond academics, I am passionate about ethical hacking, experimenting with new tools, and contributing to cybersecurity communities. I strongly believe in continuous learning and mentorship, often collaborating on projects and sharing insights with peers. My goal is to merge technical expertise with creativity, applying my knowledge to real-world scenarios to strengthen digital systems, uncover vulnerabilities ethically, and make meaningful contributions to the field of cybersecurity.</p>
+    <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023-2026)</strong>at the</strong>Indian School Of Ethical Hacking (ISOEH)</strong>under </strong> MAKAUT,West Bengal</strong> I specialize in Digital Forensics, Penetration Testing, OSINT,and cybersecurity tooling.</p>
+    <p>I actively engage in CTF challenges, hands-on security research, and AI-assited detection projects focused on automation and threat analysis.</p>
+    <p>My Technical skills include </strong>Python,Bash,Shell Scripting,VAPT,WAPT,Nmap,Burp Suite,Autopsy and OSINT research.</strong> I am Passionate about continous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
 
     <h3>🎓 Education</h3>
     <ul>
@@ -99,7 +99,7 @@
     </ul>
 
     <h3>🎯 Goal</h3>
-    <p>As a passionate Digital Forensic student, my goal is to deepen my knowledge of cybersecurity, digital investigations, and ethical hacking. I strive to develop practical skills that help uncover digital evidence, secure systems, and solve complex security challenges. I am committed to continuous learning, hands-on research, and exploring innovative solutions in cybersecurity, coding, and AI-assisted detection. Ultimately, I aim to become a proficient professional who bridges the gap between theory and real-world application, contributing meaningfully to the digital security landscape.</p>
+    <p>As a dedicated Digital Forensics Student, my goal is to strengthen my expertise in Cybersecurity, Digital Investigations, and Ethical Hacking. I aim to develop practical skills that help uncover Digital Evidence, Detect Vulnerbilities, and secure critical systems. I believe in Continous Learning, Collaborative Research, and Innovative Security Solutions. Ultimately, I aspire to become a proficient Cybersecurity Professional, bridging the gap between theoritical knowledge and real-world application.</p>
   </div>
 </section>
 
@@ -492,14 +492,14 @@ Instead of manually running multiple tools, users can launch and manage them thr
   </div>
 </section>
 
-    <!-- Research & Goal Section -->
+    <!-- Research Focus -->
 <section id="research" class="page" style="background:#f8f9fa; padding:60px 20px;">
   <div class="content" style="max-width:900px; margin:auto; text-align:left;">
-    <h2 style="color:#2c3e50; text-align:center;">Research & Goal</h2>
+    <h2 style="color:#2c3e50; text-align:center;">Research Focus</h2>
     <p style="font-size:16px; line-height:1.7; color:#34495e; margin-top:20px;">
-      My research focuses on forensic artifact analysis, timeline reconstruction, and applied security automation. I actively explore AI-driven phishing detection, privacy-preserving forensic analysis, and the development of open-source forensic tools and case studies. Additionally, I investigate methods to enhance digital evidence acquisition and analysis using advanced machine learning techniques, aiming to improve accuracy and reduce investigation time. My work also encompasses cloud forensics,  mobile device investigations, and emerging threat analysis, allowing me to understand vulnerabilities across diverse digital platforms. I collaborate with peers and cybersecurity communities to validate findings, participate in real-world case studies, and refine best practices, ensuring that my research is both practical and impactful.
+     My Research Focuses on Forensic Artofact Analysis, Security Automation, and AI-driven threat detection. I explore Phishing detection,Privacy-preserving Forensics, and the development of open-source forensic tools. I also study machine learning techniques to improve digital evidence acquisition, analysis, and efficiency.
       <br><br>
-      My ultimate goal is to contribute meaningfully to the cybersecurity and digital forensics community by improving investigative efficiency, bridging the gap between academic knowledge and real-world application, publishing insights, developing practical tools, and sharing guidance that empowers others in the field. Through my research and continuous learning, I strive to grow as a proficient professional capable of addressing complex security challenges and fostering safer digital environments. I am committed to combining technical expertise with creativity and practical application to make a lasting impact in the world of cybersecurity.
+     My ultimate aim is to Contribute Meaningfully to the Cybersecurity and Digital Forensics field, enhancing investigative efficiency and fostering safer digital environments through research and innovation.
     </p>
   </div>
 </section>
