--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
     <section id="about" class="page">
   <div class="content">
     <h2>About Me</h2>
-    <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023-2026)</strong>at the</strong>Indian School Of Ethical Hacking (ISOEH)</strong>under </strong> MAKAUT,West Bengal</strong> I specialize in Digital Forensics, Penetration Testing, OSINT,and cybersecurity tooling.</p>
+    <p>I am <strong>SAYANI MAITY</strong>, currently pursuing <strong>B.Sc. in Digital Forensics (2023-2026)</strong>at the </strong>Indian School Of Ethical Hacking (ISOEH)</strong> under </strong>MAKAUT,West Bengal</strong> . I specialize in Digital Forensics, Penetration Testing, OSINT,and cybersecurity tooling.</p>
     <p>I actively engage in CTF challenges, hands-on security research, and AI-assited detection projects focused on automation and threat analysis.</p>
-    <p>My Technical skills include </strong>Python,Bash,Shell Scripting,VAPT,WAPT,Nmap,Burp Suite,Autopsy and OSINT research.</strong> I am Passionate about continous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
+    <p>My Technical skills include </strong>Python,Bash,Shell Scripting,VAPT,WAPT,Nmap,Burp Suite,Autopsy and OSINT research</strong> .I am Passionate about continous learning, applying cybersecurity knowledge to real-world problems, and contributing to a safer digital ecosystem.</p>
 
     <h3>🎓 Education</h3>
     <ul>
